# zenbar-agent-commander

./: .gitignore  2026-03-11.plan.md  2026-03-12.zenbar-runtime-state-machine.plan.md  2026-03-13-mobile-ui.plan.md  2026-03-13-ui-layout-refactor.plan.md  2026-03-16-hover-text-visibility-fix.plan.md  Deployment.md  LICENSE.md  README.md  TOOLS.md  package.json  pnpm-lock.yaml
apps/web/: .env.example  .env.local  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  styles.css
scripts/: dev-all.sh  dev-api-external.sh  dev-api.sh  dev-external-bg.sh  dev-external-stop.sh  dev-external.sh  dev-web-external.sh  dev-web.sh
services/api/: .env.example  .env.local  pyproject.toml
services/api/app/: app_server_manager.py  db.py  main.py  model_catalog.py  models.py  repo_discovery.py  repository.py  runtime.py  schemas.py  service.py  streaming.py  workspace.py
services/api/tests/: test_api.py
services/api/zenbar_orchestration_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
