[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenbar-orchestration-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "pydantic>=2.10.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.34.0",
  "websockets>=16.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3"
]
